--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -23,20 +23,22 @@
           <% hotelsInfo.forEach((hotel, index) => { %>
             <div class="col">
                 <div class="card">
-                    <a  style="text-decoration: none;" class="text-dark" href="/hotel-details/<%= hotel._id %>" > <!-- Link to the booking page with hotel ID -->
+                    <a  style="text-decoration: none;" class="text-dark" href="/hotel-details/<%=hotel.HotelName %>" >
+                          
+                        <!-- Link to the booking page with hotel ID -->
                         <div id="carouselExampleIndicators<%= index %>" class="carousel slide" >
                             <div class="carousel-indicators">
                                 <button type="button" data-bs-target="#carouselExampleIndicators<%= index %>" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators<%= index %>" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                <!-- <button type="button" data-bs-target="#carouselExampleIndicators<%= index %>" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                 <button type="button" data-bs-target="#carouselExampleIndicators<%= index %>" data-bs-slide-to="2" aria-label="Slide 3"></button>
                                 <button type="button" data-bs-target="#carouselExampleIndicators<%= index %>" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators<%= index %>" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators<%= index %>" data-bs-slide-to="4" aria-label="Slide 5"></button> -->
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img src="<%= hotel.imagesUrl.image1 %>" class="  fix-sized" alt="...">
                                 </div>
-                                <div class="carousel-item ">
+                                <!-- <div class="carousel-item ">
                                     <img src="<%= hotel.imagesUrl.image2 %>" class="  fix-sized"alt="...">
                                 </div>
                                 <div class="carousel-item ">
@@ -47,7 +49,7 @@
                               </div>
                               <div class="carousel-item ">
                                 <img src="<%= hotel.imagesUrl.image5 %>" class="  fix-sized" alt="...">
-                            </div>
+                            </div> -->
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators<%= index %>" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
