--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary shadow">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary shadow mb-3">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#"><img style="height: 2rem;" src="/images/stayhub logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -14,7 +14,7 @@
             <a class="nav-link" href="/search">find hotel</a>
           </li>
           <li class="nav-item mx-2 ">
-            <a class="nav-link" href="#">My bookings</a>
+            <a class="nav-link" href="/mybookings">My bookings</a>
           </li>
           <li class="nav-item mx-2 ">
             <a class="nav-link " aria-disabled="true" href="#">Help & support</a>
