--- a/views/registerPage.ejs
+++ b/views/registerPage.ejs
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <section class="vh-100" style="background-color: #eee;">
+    <section  style="background-color: #eee;">
         <div class="container h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-lg-12 col-xl-11">
@@ -19,49 +19,62 @@
       
                       <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
       
-                      <form class="mx-1 mx-md-4">
-      
-                        <div class="d-flex flex-row align-items-center mb-4">
+                      <form  id="registerationForm" action="/register" method="post" enctype="application/x-www-form-urlencoded" autocomplete="on">
+                         
+                        <div class="d-flex flex-row align-items-center  mb-4">
                           <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
-                            <input type="text" id="form3Example1c" class="form-control" />
-                            <label class="form-label" for="form3Example1c">Your Name</label>
+                            <input type="text" id="firstName" class="form-control" style="width: 95%;"  name="firstName" required />
+                            <label class="form-label" for="firstName">First Name</label>
+                          </div>
+                          <div class="form-outline flex-fill mb-0">
+                            <input type="text" id="lastName" class="form-control" name="lastName" required />
+                            <label class="form-label" for="lastName" >Last Name</label>
                           </div>
                         </div>
       
-                        <div class="d-flex flex-row align-items-center mb-4">
+                      <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
-                            <input type="email" id="form3Example3c" class="form-control" />
-                            <label class="form-label" for="form3Example3c">Your Email</label>
+                            <input type="email" id="email" class="form-control" name="email" required />
+                            <label class="form-label" for="email">Your Email</label>
                           </div>
+                          <div id="error-message" class="alert alert-danger d-none" role="alert">
+                            This email is already registered. Please use a different email.
+                          </div>
+                          
+
                         </div>
       
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
-                            <input type="password" id="form3Example4c" class="form-control" />
-                            <label class="form-label" for="form3Example4c">Password</label>
+                            <input type="password" id="password" class="form-control" name="password" required />
+                            <label class="form-label" for="password">Password</label>
                           </div>
                         </div>
       
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
-                            <input type="password" id="form3Example4cd" class="form-control" />
-                            <label class="form-label" for="form3Example4cd">Repeat your password</label>
+                            <input type="password" id="confirmPassword" class="form-control" name="confirmPassword" required />
+                            <label class="form-label" for="confirmPassword">Repeat your password</label>
                           </div>
                         </div>
       
-                        <div class="form-check d-flex justify-content-center mb-5">
-                          <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
-                          <label class="form-check-label" for="form2Example3">
-                            I agree all statements in <a href="#!">Terms of service</a>
+                        
+                        <div class="form-check d-flex justify-content-center mb-3">
+                          <input class="form-check-input me-2" type="checkbox" value="" id="termAndconds" required />
+                          <label class="form-check-label" for="termAndconds">
+                            I agree all statements in <a href="#!" class="text-decoration-none" >Terms of service</a>
                           </label>
                         </div>
-      
+                        <div>
+                          <p class="ms-3" >Have an account? <a href="/login" class="text-primary text-decoration-none fw-bold">Login</a>
+                          </p>
+                        </div>
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                          <button type="button" class="btn btn-primary btn-lg">Register</button>
+                          <button type="submit" class="btn btn-primary btn-lg">Register</button>
                         </div>
       
                       </form>
@@ -80,5 +93,9 @@
           </div>
         </div>
       </section>
+      
+<script>
+
+</script>
 </body>
 </html>
