--- a/views/registerPage.ejs
+++ b/views/registerPage.ejs
@@ -1,101 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Register</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <script src="https://kit.fontawesome.com/f44f2f85dc.js" crossorigin="anonymous"></script>
 
 </head>
-<body>
-    <section  style="background-color: #eee;">
-        <div class="container h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-lg-12 col-xl-11">
-              <div class="card text-black" style="border-radius: 25px;">
-                <div class="card-body p-md-5">
-                  <div class="row justify-content-center">
-                    <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-      
-                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
-      
-                      <form  id="registerationForm" action="/register" method="post" enctype="application/x-www-form-urlencoded" autocomplete="on">
-                         
-                        <div class="d-flex flex-row align-items-center  mb-4">
-                          <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                          <div class="form-outline flex-fill mb-0">
-                            <input type="text" id="firstName" class="form-control" style="width: 95%;"  name="firstName" required />
-                            <label class="form-label" for="firstName">First Name</label>
-                          </div>
-                          <div class="form-outline flex-fill mb-0">
-                            <input type="text" id="lastName" class="form-control" name="lastName" required />
-                            <label class="form-label" for="lastName" >Last Name</label>
-                          </div>
-                        </div>
-      
-                      <div class="d-flex flex-row align-items-center mb-4">
-                          <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                          <div class="form-outline flex-fill mb-0">
-                            <input type="email" id="email" class="form-control" name="email" required />
-                            <label class="form-label" for="email">Your Email</label>
-                          </div>
-                          <div id="error-message" class="alert alert-danger d-none" role="alert">
-                            This email is already registered. Please use a different email.
-                          </div>
-                          
 
-                        </div>
-      
-                        <div class="d-flex flex-row align-items-center mb-4">
-                          <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                          <div class="form-outline flex-fill mb-0">
-                            <input type="password" id="password" class="form-control" name="password" required />
-                            <label class="form-label" for="password">Password</label>
-                          </div>
-                        </div>
-      
-                        <div class="d-flex flex-row align-items-center mb-4">
-                          <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                          <div class="form-outline flex-fill mb-0">
-                            <input type="password" id="confirmPassword" class="form-control" name="confirmPassword" required />
-                            <label class="form-label" for="confirmPassword">Repeat your password</label>
-                          </div>
-                        </div>
-      
-                        
-                        <div class="form-check d-flex justify-content-center mb-3">
-                          <input class="form-check-input me-2" type="checkbox" value="" id="termAndconds" required />
-                          <label class="form-check-label" for="termAndconds">
-                            I agree all statements in <a href="#!" class="text-decoration-none" >Terms of service</a>
-                          </label>
-                        </div>
-                        <div>
+<body>
+  <section style="background-color: #eee">
+    <div class="container h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-lg-12 col-xl-11">
+          <div class="card text-black" style="border-radius: 25px">
+            <div class="card-body">
+              <div class="row justify-content-center">
+                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+                  <p class="text-center h1 fw-bold mb-4 mx-1 mx-md-4 mt-4">
+                    Sign up
+                  </p>
+
+                  <form class="mx-1 mx-md-4 registerForm" enctype="application/x-www-form-urlencoded" autocomplete="on">
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class=" mb-4 fas fa-user fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input type="text" id="firstName" class="form-control" style="width: 95%" name="firstName"
+                          required />
+                        <label class="form-label" for="firstName">First
+                          Name</label>
+                      </div>
+                      <div class="form-outline flex-fill mb-0">
+                        <input type="text" id="lastName" class="form-control" name="lastName" required />
+                        <label class="form-label" for="lastName">Last
+                          Name</label>
+                      </div>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class=" mb-4 fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input type="email" id="email" class="form-control" name="email" required />
+                        <label class="form-label" for="email" id="emailLabel">Your Email
+                          <span class="invalid-feedback" style="display: none; font-size: 15px" name="emailAlertSpan"
+                            id="emailAlertSpan">is already
+                            register</span></label>
+                      </div>
+                    </div>
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class=" mb-4 fas fa-lock fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input type="password" id="password" class="form-control" name="password" required />
+                        <label class="form-label" for="password" id="passwordLabel">Password
+                          <span id="passwordMatchError" style="display: none">and confirm Password not match
+                          </span></label>
+                      </div>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class=" mb-4 fas fa-key fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input type="password" id="confirmPassword" class="form-control" name="confirmPassword"
+                          required />
+                        <label class="form-label" for="confirmPassword">Repeat
+                          your password</label>
+                      </div>
+                    </div>
+
+                    <div class="form-check d-flex justify-content-center mb-3">
+                      <input class="form-check-input me-2" type="checkbox" value id="termAndconds" required />
+                      <label class="form-check-label" for="termAndconds">
+                        I agree all statements in
+                        <a href="#!" class="text-decoration-none">Terms of
+                          service</a>
+                      </label>
+                    </div>
+                    <div>
                           <p class="ms-3" >Have an account? <a href="/login" class="text-primary text-decoration-none fw-bold">Login</a>
                           </p>
                         </div>
-                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                          <button type="submit" class="btn btn-primary btn-lg">Register</button>
-                        </div>
-      
-                      </form>
-      
+                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                      <button type="submit" class="btn btn-primary btn-lg">
+                        Register
+                      </button>
                     </div>
-                    <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-      
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                        class="img-fluid" alt="Sample image">
-      
-                    </div>
-                  </div>
+                  </form>
+                </div>
+
+                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                    class="img-fluid" alt="Sample image" />
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
-      
-<script>
+      </div>
+    </div>
+  </section>
 
-</script>
+  <script>
+    const registerForm = document.querySelector(".registerForm");
+
+    registerForm.addEventListener("submit", (event) => {
+      event.preventDefault();
+
+      const passwordInput = document.getElementById("password");
+      const confirmPasswordInput = document.getElementById("confirmPassword");
+      const passwordMatchError =
+        document.getElementById("passwordMatchError");
+      const passwordLabel = document.getElementById("passwordLabel");
+
+      if (passwordInput.value !== confirmPasswordInput.value) 
+      {
+        confirmPasswordInput.classList.add("is-invalid");
+        passwordInput.classList.add("is-invalid");
+        passwordMatchError.style.display = "inline";
+        passwordLabel.classList.add("text-danger");
+      } 
+      else {
+        confirmPasswordInput.classList.remove("is-invalid");
+
+        passwordInput.classList.remove("is-invalid");
+        passwordMatchError.style.display = "none";
+        passwordLabel.classList.remove("text-danger");
+
+        // If passwords match, submit the form
+
+        const email = document.getElementById("email");
+        const emaillLabel = document.getElementById("emailLabel");
+        const emailAlertSpan = document.getElementById("emailAlertSpan");
+        // console.log(registerForm);
+        const formData = new FormData(registerForm);
+        const userInfo = {
+          firstName: formData.get("firstName"),
+          lastName: formData.get("lastName"),
+          email: formData.get("email"),
+          password: formData.get("password"),
+          confirmPassword: formData.get("confirmPassword"),
+        };
+
+        fetch("/register", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(userInfo),
+        })
+          .then((res) => {
+            // Check if the response is OK
+            if (res.status == 400) {
+              console.log("email already exists");
+              emaillLabel.classList.add("text-danger");
+              emailAlertSpan.style.display = "inline";
+            } else {
+              emaillLabel.classList.remove("text-danger");
+              emailAlertSpan.style.display = "none";
+              // If passwords match, submit the form
+              console.log("Form submited successfully");
+              registerForm.reset();
+            }
+            // Parse the response as JSON
+            // return res.json();
+          })
+          .catch((err) => {
+            console.error(
+              "There was a problem with the fetch operation:",
+              err
+            );
+          });
+      }
+    });
+  </script>
 </body>
+
 </html>
