--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -17,10 +17,10 @@
             <a class="nav-link" href="/mybookings">My bookings</a>
           </li>
           <li class="nav-item mx-2 ">
-            <a class="nav-link " aria-disabled="true" href="#">Help & support</a>
+            <a class="nav-link " aria-disabled="true" href="/aboutUs">About Us</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link " aria-disabled="true" href="#">About Us</a>
+            <a class="nav-link " aria-disabled="true" href="#">Help & support</a>
           </li>
         </ul>
       </div>
