--- a/views/registerPage.ejs
+++ b/views/registerPage.ejs
@@ -49,8 +49,8 @@
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="mb-4 me-1 fas fa-lock fa-lg fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="password" id="password" class="form-control" name="password" required />
-                        <label class="form-label" for="password" id="passwordLabel">Password
+                        <input type="password" id="password" class="form-control" name="password" min="2" required />
+                        <label class="form-label" for="password" id="passwordLabel"  >Password
                           <span id="passwordMatchError" style="display: none">and confirm Password not match
                           </span></label>
                       </div>
@@ -60,7 +60,7 @@
                       <i class="mb-4 me-1 fas fa-key fa-lg fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
                         <input type="password" id="confirmPassword" class="form-control" name="confirmPassword"
-                          required />
+                         min="2" required />
                         <label class="form-label" for="confirmPassword">Repeat your password</label>
                       </div>
                     </div>
@@ -155,6 +155,7 @@
               // If passwords match, submit the form
               console.log("Form submited successfully");
               registerForm.reset();
+              location.assign('/')
             }
             // Parse the response as JSON
             // return res.json();
@@ -166,8 +167,10 @@
             );
           });
       }
-    });
-  </script>
+    }
+  );
+ 
+ </script>
 </body>
 
 </html>
