--- a/views/myBookingPage.ejs
+++ b/views/myBookingPage.ejs
@@ -36,7 +36,7 @@
     <h1 class="mb-4">My Bookings</h1>
 
     <div class="row">
-        <% bookings.forEach(booking => { %>
+        <% mybookings.forEach(booking => { %>
             <div class="col-md-6">
                 <div class="card booking-card">
                     <div class="card-body">
