--- a/views/hotelDetailsPage.ejs
+++ b/views/hotelDetailsPage.ejs
@@ -9,7 +9,6 @@
             width: 100%;
             height: 30rem;
             object-fit: cover;
-
         }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -17,8 +16,8 @@
 <body>
      
 <div class="container-fluid m-2">
-    <h1><%= hotel.HotelName %></h1>
-    <p><%= hotel.Description %></p>
+    <h1><%= hotelDetails.HotelName %></h1>
+    <p><%= hotelDetails.Description %></p>
        <div>
       <div id="carouselExampleIndicators" class="carousel slide" >
         <div class="carousel-indicators">
@@ -30,19 +29,19 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="<%= hotel.imagesUrl.image1 %>" class="hotelImagesLarge" alt="...">
+                <img src="<%= hotelDetails.imagesUrl.image1 %>" class="hotelImagesLarge" alt="...">
             </div>
             <div class="carousel-item ">
-                <img src="<%= hotel.imagesUrl.image2 %>" class="hotelImagesLarge"alt="...">
+                <img src="<%= hotelDetails.imagesUrl.image2 %>" class="hotelImagesLarge"alt="...">
             </div>
             <div class="carousel-item ">
-                <img src="<%= hotel.imagesUrl.image3 %>" class="hotelImagesLarge" alt="...">
+                <img src="<%= hotelDetails.imagesUrl.image3 %>" class="hotelImagesLarge" alt="...">
             </div>
             <div class="carousel-item  ">
-              <img src="<%= hotel.imagesUrl.image4 %>" class="hotelImagesLarge" alt="...">
+              <img src="<%= hotelDetails.imagesUrl.image4 %>" class="hotelImagesLarge" alt="...">
           </div>
           <div class="carousel-item ">
-            <img src="<%= hotel.imagesUrl.image5 %>" class="hotelImagesLarge" alt="...">
+            <img src="<%= hotelDetails.imagesUrl.image5 %>" class="hotelImagesLarge" alt="...">
         </div>
         </div>
         <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -58,7 +57,7 @@
   <!-- Hotel rooms -->
     <h2>Rooms</h2>
     <div class="row">
-        <% hotel.Rooms.slice(0, 5).forEach(room => { %>
+        <% hotelDetails.Rooms.slice(0, 5).forEach(room => { %>
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div class="card-body">
@@ -73,13 +72,13 @@
         
         <!-- Hotel address -->
         <h2>Address</h2>
-        <p><b>Street:</b> <%= hotel.Address.StreetAddress %></p> 
-        <p><b>City:</b> <%= hotel.Address.City %></p>
-         <p><b>State:</b> <%= hotel.Address.StateProvince %></p>
-         <p><b>Postal Code:</b> <%= hotel.Address.PostalCode %></p>
-         <p><b>Country:</b> <%= hotel.Address.Country %></p> 
+        <p><b>Street:</b> <%= hotelDetails.Address.StreetAddress %></p> 
+        <p><b>City:</b> <%= hotelDetails.Address.City %></p>
+         <p><b>State:</b> <%= hotelDetails.Address.StateProvince %></p>
+         <p><b>Postal Code:</b> <%= hotelDetails.Address.PostalCode %></p>
+         <p><b>Country:</b> <%= hotelDetails.Address.Country %></p> 
     </div>
-    <div><a type="button" href="/booking/<%=hotel.HotelName%>" class="btn btn-primary btn-lg">Reserve Now</a></div>
+    <div><a type="button" href="/booking/<%=hotelDetails.HotelName%>" class="btn btn-primary btn-lg">Reserve Now</a></div>
 </div>
 
 <!-- Add Bootstrap JS and Popper.js scripts -->
