Seperate the code by controllers

--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -89,7 +89,7 @@
         email: loginFormData.get('email'),
         password: loginFormData.get('password')
       }
-      console.log(JSON.stringify(loginUserInfoObj))
+      // console.log(JSON.stringify(loginUserInfoObj))
       fetch('/login',
         {
           method: 'POST',
