--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,29 +1,35 @@
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary shadow mb-3">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img style="height: 2rem;" src="/images/stayhub logo.png" alt=""></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse flex-row-reverse " id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item mx-2 ">
-            <a class="nav-link" aria-current="page" href="/home">Home</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link" href="/search">find hotel</a>
-          </li>
-          <li class="nav-item mx-2 ">
-            <a class="nav-link" href="/mybookings">My bookings</a>
-          </li>
-          <li class="nav-item mx-2 ">
-            <a class="nav-link " aria-disabled="true" href="#">Help & support</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link " aria-disabled="true" href="#">About Us</a>
-          </li>
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary shadow mb-3">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><img style="height: 2rem;" src="/images/stayhub logo.png" alt="Stayhub Logo"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item mx-2">
+          <a class="nav-link" aria-current="page" href="/home">Home</a>
+        </li>
+        <li class="nav-item mx-2">
+          <a class="nav-link" href="/search">Find Hotel</a>
+        </li>
+        <li class="nav-item mx-2">
+          <a class="nav-link" href="/mybookings">My Bookings</a>
+        </li>
+        <li class="nav-item mx-2">
+          <a class="nav-link" href="/about">About Us</a>
+        </li>
+        <li class="nav-item  mx-2">
+          <a class="nav-link" href="/login"  aria-expanded="false">
+            <%= user.isLoggedIn ? user.firstName: 'Profile' %>
+
+            <%console.log(user,"hello from log")%>
+
+          </a>
+         
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 <!--  -->
