--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -19,15 +19,17 @@
         <li class="nav-item mx-2">
           <a class="nav-link" href="/about">About Us</a>
         </li>
-        <li class="nav-item  mx-2">
-          <a class="nav-link" href="/login"  aria-expanded="false">
-            <%= user.isLoggedIn ? user.firstName: 'Profile' %>
-
-            <%console.log(user,"hello from log")%>
-
-          </a>
-         
-        </li>
+        <% if (user) { %>
+          <li class="nav-item mx-2">
+              <a class="nav-link fw-bold bg-primary text-white rounded px-3" href="/profile"><%= user.lastName %></a>
+          </li>
+      <% } else { %>
+          <li class="nav-item mx-2">
+              <a class="" href="/login"><button type="button" class="btn btn-outline-primary">Login</button></a>
+              
+              
+          </li>
+      <% } %>
       </ul>
     </div>
   </div>
