--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -23,14 +23,21 @@
               </div>
               <div class="col-md-6 col-lg-7 d-flex align-items-center">
                 <div class="card-body p-4 p-lg-5 text-black">
+                  <div class="container mt-5">
+                    <% if (error_msg && error_msg.length > 0) { %>
+                      <div class="alert alert-danger">
+                        <%= error_msg[0] %>
+                      </div>
+                    <% } %>
 
                   <form id="loginForm">
-
+                    
+          
                     <div class="d-flex align-items-center mb-3 pb-1">
                       <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
                       <span class="h1 fw-bold mb-0">Logo</span>
                     </div>
-
+                 
                     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
 
                     <div class="form-outline mb-4">
