--- a/views/registerPage.ejs
+++ b/views/registerPage.ejs
@@ -162,7 +162,7 @@
               emaillLabel.classList.remove("text-danger");
               emailAlertSpan.style.display = "none";
               // If passwords match, submit the form
-              console.log("Form submited successfully");
+              // console.log("Form submited successfully");
               registerForm.reset();
               location.assign('/')
             }
