add room feature done

--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -108,7 +108,7 @@
       
         if(isAdmin.includes('admin'))
         {
-         return location.assign('/admin');  // routing to the admin routes
+         return location.assign('/admin/dashboard');  // routing to the admin routes
         }
       clearErrorStates();
       
