--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -21,7 +21,7 @@
         </li>
         <% if (user) { %>
           <li class="nav-item mx-2">
-              <a class="nav-link fw-bold bg-primary text-white rounded px-3" href="/profile"><%= user.lastName %></a>
+              <a class="nav-link fw-bold bg-primary text-white rounded px-3" href="/profile"><%= user.fullName %></a>
           </li>
       <% } else { %>
           <li class="nav-item mx-2">
