--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -14,7 +14,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Profile Information</h5>
-        <p class="card-text"><strong>Name:</strong> <%= user.firstName +' '+user.lastName %></p>        
+        <p class="card-text"><strong>Name:</strong> <%= user.fullName %></p>        
         <p class="card-text"><strong>Email:</strong> <%= user.email %></p>
         <a href="/logout" class="btn btn-primary">logout</a>
 
