--- a/views/adminPages/addRoomPage.ejs
+++ b/views/adminPages/addRoomPage.ejs
@@ -2,28 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+   
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Details</title>
     <style>
-        *{
+         *{
             margin: 0;
             padding: 0;
         }
-        .hotelImagesLarge{
+         .hotelImagesLarge{
             width: 100%;
             height: 30rem;
             object-fit: cover;
         }
-        
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <title>Add Room</title>
 </head>
 <body>
-  <%- include('partials/navbar') %>
+    <%- include('../partials/adminNavbar') %>
 <div class="container-fluid">
     <h1><%= hotelDetails.HotelName %></h1>
     <p><%= hotelDetails.Description %></p>
-       <div>
+     
       <div id="carouselExampleIndicators" class="carousel slide" >
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -57,37 +58,64 @@
             <span class="carousel-control-next-icon"  aria-hidden="true"></span>
         </button>
     </div>
-</div>
+
    
   <!-- Hotel rooms -->
-    <h2>Rooms</h2>
+    <div class="hotel-room-details-container">
+    <h2 class="mt-4">Rooms</h2>
     <div class="row">
-        <% hotelDetails.Rooms.slice(0, 5).forEach(room => { %>
+        <% hotelDetails.Rooms.forEach(room => { %>
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title"><%= room.Description %></h5>
-                        <!-- <p class="card-text"><b>Type:</b> <%= room.Type %></p> -->
-                        <p class="card-text"><b>Base Rate:</b> $<%= room.BaseRate.toFixed(2) %></p>
-                        <!-- Add more details as needed -->
+                        <p class="card-text"><b>Base Rate:</b> $<%= room.BaseRate %></p>
                     </div>  
                 </div>
             </div>
         <% }) %>
         
-        <!-- Hotel address -->
-        <div class="address-container d-flex">
-            <p><b>Street:</b> <%= hotelDetails.Address.StreetAddress %></p> 
-            <p><b>City:</b> <%= hotelDetails.Address.City %></p>
-            <p><b>State:</b> <%= hotelDetails.Address.StateProvince %></p>
-            <p><b>Postal Code:</b> <%= hotelDetails.Address.PostalCode %></p>
-            <p><b>Country:</b> <%= hotelDetails.Address.Country %></p>
-          </div>
+        
     </div>
-    <div><a type="button" href="/booking/<%=hotelDetails.HotelName%>" class="btn btn-primary btn-lg">Reserve Now</a></div>
 </div>
 
-<!-- Add Bootstrap JS and Popper.js scripts -->
+     <!-- Hotel address -->
+     <div class="address-container mt-3">
+        <h2>Address: <span class="text-secondary"><%= hotelDetails.Address.StreetAddress %> <%= hotelDetails.Address.City %> <%= hotelDetails.Address.StateProvince %>  <%= hotelDetails.Address.Country %></span> </h2>
+     
+      </div>
+      <hr class="mb-2">
+  <!-- Form to add room -->
+  <h2 class="mt-5">Add Room</h2>
+  <form class="row mx-auto mb-5" id="addRoomForm" method="POST" action="/admin/hotels/add-room/<%= hotelDetails.HotelName %>">
+    <div class="form-group col-md-3">
+      <label for="description">Room Description</label>
+      <input type="text" class="form-control" id="description" name="description" required placeholder="Enter room type"list="roomTypeList">
+      <datalist id="roomTypeList">
+        <option value=" Queen Room"></option>
+        <option value="King Room"></option>
+        <option value="Twin Room"></option>
+        <option value="Double Room"></option> 
+        <option value="Studio Room"></option>
+      </datalist>
+    </div>
+    <div class="form-group col-md-3">
+      <label for="baseRate">Base Rate</label>
+      <input type="number" class="form-control" id="baseRate" name="baseRate" required placeholder="Enter base rate">
+    </div>
+    <div class="form-group col-md-3">
+      <label for="sleepsCount">Sleeps Count</label>
+      <input type="number" class="form-control" id="sleepsCount" name="sleepsCount" required min="1" max="6" placeholder="Enter sleeps count">
+    </div>
+    <div class="form-group col-md-3 d-flex align-items-end">
+      <button type="submit" class="btn btn-primary w-100">Add Room</button>
+    </div>
+  </form>
+  
+  
+  
+
+</div> 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"  crossorigin="anonymous"></script>
 
 </body>
