--- a/views/adminPages/userManagePage.ejs
+++ b/views/adminPages/userManagePage.ejs
@@ -12,10 +12,11 @@
 <body>
   <%- include('../partials/adminNavbar') %>
 
-    <div class="container mt-5">
+    <div class="container-fluid">
+
       <!-- Add user section -->
       <div>
-        <h1 class="text-center">Add User</h1>
+        <h2 class="text-center mt-5">Add User</h2>
         <!-- Add User Form -->
         <div class="card mb-5 w-75 mx-auto">
           <div class="card-body">
@@ -42,7 +43,7 @@
 
       <!-- Delete user section -->
       <div>
-        <h1 class="text-center">Delete User</h1>
+        <h2 class="text-center">Delete User</h2>
         <div class="card mb-5 w-75 mx-auto">
           <div class="card-body">
             <form id="deleteUserForm">
@@ -59,7 +60,7 @@
       </div>
 
       <!-- Users Section -->
-      <div>
+          <div>
         <h2 class="text-center">Registered Users</h2>
         <table class="table table-bordered">
           <thead>
