Add new hotel feature done

--- a/views/adminPages/addRoomPage.ejs
+++ b/views/adminPages/addRoomPage.ejs
@@ -81,7 +81,7 @@
 
      <!-- Hotel address -->
      <div class="address-container mt-3">
-        <h2>Address: <span class="text-secondary"><%= hotelDetails.Address.StreetAddress %> <%= hotelDetails.Address.City %> <%= hotelDetails.Address.StateProvince %>  <%= hotelDetails.Address.Country %></span> </h2>
+        <h2>Address: <span class="text-secondary"><%= hotelDetails.Address.StreetAddress %> <%= hotelDetails.Address.City %> <%= hotelDetails.Address.Country %></span> </h2>
      
       </div>
       <hr class="mb-2">
@@ -111,7 +111,6 @@
       <button type="submit" class="btn btn-primary w-100">Add Room</button>
     </div>
   </form>
-  
   
   
 
