--- a/views/hotelDetailsPage.ejs
+++ b/views/hotelDetailsPage.ejs
@@ -68,7 +68,7 @@
                     <div class="card-body">
                         <h5 class="card-title"><%= room.Description %></h5>
                         <!-- <p class="card-text"><b>Type:</b> <%= room.Type %></p> -->
-                        <p class="card-text"><b>Base Rate:</b> $<%= room.BaseRate.toFixed(2) %></p>
+                        <p class="card-text"><b>Base Rate:</b> $<%= room.BaseRate %></p>
                         <!-- Add more details as needed -->
                     </div>  
                 </div>
